--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -16,7 +16,7 @@
         android:layout_centerInParent="true"/>
     <Button
         android:id="@+id/sinaLogin"
-        android:text="点击实现qq登录"
+        android:text="点击微博登录"
         android:layout_width="60dp"
         android:layout_below="@id/qqLogin"
         android:layout_height="wrap_content"
